g06-fubon-kong-poc/manifests/00-namespaces-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kong-cp-uat
  labels:
    app.kubernetes.io/part-of: fubon-kong-poc
    fubon.com.hk/environment: kong-poc-uat
---
apiVersion: v1
kind: Namespace
metadata:
  name: kong-dp-uat
  labels:
    app.kubernetes.io/part-of: fubon-kong-poc
    fubon.com.hk/environment: kong-poc-uat
